fix can not click menu on mobile

--- a/style.css
+++ b/style.css
@@ -285,11 +285,12 @@ footer {
 @media (max-width: 768px) {
     .nav-links {
         position: absolute;
-        top: 70px;
+        top: 100px;
+        width: 100%;
         right: 0;
         background: white;
+        padding: 20px 0;
         flex-direction: column;
-        width: 200px;
         display: none;
         box-shadow: 0 10px 25px rgba(0,0,0,.2);
     }
